# garu

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac
data/: Makefile.am  com.github.mgyugcha.garu.gschema.xml
po/: Makevars  POTFILES.in  es.po  garu-music.pot
src/: Makefile.am  garu-about-dialog.c  garu-about-dialog.h  garu-application.c  garu-application.h  garu-effects.c  garu-effects.h  garu-folder-browser.c  garu-folder-browser.h  garu-headerbar.c  garu-headerbar.h  garu-library.c  garu-library.h  garu-playbin.c  garu-playbin.h  garu-player-bin.c  garu-player-bin.h  garu-player.c  garu-player.h  garu-playlist.c  garu-playlist.h  garu-preferences.c  garu-preferences.h  garu-song-box.c  garu-song-box.h  garu-tagger.c  garu-tagger.h  garu-utils.c  garu-utils.h  garu-widgets.h  garu-window.c  garu-window.h  garu.c
